--- a/components/products-list-header/products-list-header-style.less
+++ b/components/products-list-header/products-list-header-style.less
@@ -1,24 +1,22 @@
-// this is copied from explore-style.  need to redo it.
-#explore-search-form {
-  display:        inline-block;
-  width:          100%;
-  height:         35px;
-  margin-top:     4px;
-  padding-top:    1px;
-  .box-shadow-input;
-  .border-radius(@inputBorderRadius);
+.header-controls {
+  padding-top: 10px;
+}
 
-  input {
-    border:               0 !important;
-    margin:               0;
-    -webkit-box-shadow:   none !important;
-    box-shadow:           none !important;
-    background-color:     transparent;
-    width:                170px;
-  }
-  button {
-    border:               none;
-    background:           none;
-    display:              none;
-  }
+.header-tagline {
+  text-align: center;
+  line-height: 42px;
+  color: red; /* TODO: proper red color */
+  font-size: 23px;
+  font-weight: 500;
+}
+
+#header-search-form {
+  padding-top: 4px;
+  margin-bottom: 0; /* override rule for forms */
+  float: right;
+}
+
+#header-search-form input.field-search {
+  font-size: 15px;
+  width: 229px;
 }
