--- a/pages/explore/explore-style.less
+++ b/pages/explore/explore-style.less
@@ -6,33 +6,9 @@
   padding-top: 154px;
 }
 
-header.page-header-box.stuck {
+header.page-header-box {
   position: fixed;
   z-index: 1;
   width: 1195px;
-  top: -20px;
-}
-
-#explore-search-form {
-  display:        inline-block;
-  width:          100%;
-  height:         35px;
-  margin-top:     4px;
-  padding-top:    1px;
-  .box-shadow-input;
-  .border-radius(@inputBorderRadius);
-
-  input {
-    border:               0 !important;
-    margin:               0;
-    -webkit-box-shadow:   none !important;
-    box-shadow:           none !important;
-    background-color:     transparent;
-    width:                170px;
-  }
-  button {
-    border:               none;
-    background:           none;
-    display:              none;
-  }
+  top: 55px;
 }
