Navbar colors rebranded

--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -11,10 +11,14 @@
 @header-navbar-height:                  60px;
 @header-navbar-font-size:               19px;
 @header-navbar-link-color:              #ffffff;
-@header-navbar-link-active-color:       #33d6ff;
+@header-navbar-link-active-color:       #feffba;
 @header-navbar-link-padding-top:        (@header-navbar-height - (@header-navbar-font-size + 1)) / 2;
 @header-navbar-shadow-color:            rgba(29, 26, 27, 0.33);
 @header-navbar-shadow:                  0 2px 3px @header-navbar-shadow-color;
+@header-navbar-background-color:        #dc291e;
+@header-navbar-badge-gradient-top: #fe5438;
+@header-navbar-badge-gradient-bottom: #eb1d13;
+@header-navbar-badge-avatar-stroke: #8f251f;
 
 .header-navbar {
   position: fixed;
@@ -26,13 +30,13 @@
   font-size: @header-navbar-font-size;
   font-weight: 100;
 
-  background: rgb(51,51,51); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(51,51,51,1) 0%, rgba(29,27,27,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(51,51,51,1)), color-stop(100%,rgba(29,27,27,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* W3C */
+  background: @header-navbar-background-color;//rgb(51,51,51); /* Old browsers */
+  // background: -moz-linear-gradient(top,  rgba(51,51,51,1) 0%, rgba(29,27,27,1) 100%); /* FF3.6+ */
+  // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(51,51,51,1)), color-stop(100%,rgba(29,27,27,1))); /* Chrome,Safari4+ */
+  // background: -webkit-linear-gradient(top,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* Chrome10+,Safari5.1+ */
+  // background: -o-linear-gradient(top,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* Opera 11.10+ */
+  // background: -ms-linear-gradient(top,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* IE10+ */
+  // background: linear-gradient(to bottom,  rgba(51,51,51,1) 0%,rgba(29,27,27,1) 100%); /* W3C */
   // filter:     progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#1d1b1b',GradientType=0 ); /* IE6-9 */
 
   box-shadow: @header-navbar-shadow;
@@ -167,18 +171,18 @@ li.get-the-app .icon-iphone-app {
   width: 210px;
   height: 100%;
 
-  background: rgb(72,72,72); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(72,72,72,1) 0%, rgba(29,26,27,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(72,72,72,1)), color-stop(100%,rgba(29,26,27,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(72,72,72,1) 0%,rgba(29,26,27,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(72,72,72,1) 0%,rgba(29,26,27,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(72,72,72,1) 0%,rgba(29,26,27,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(72,72,72,1) 0%,rgba(29,26,27,1) 100%); /* W3C */
+  background: @header-navbar-badge-gradient-top; /* Old browsers */
+  background: -moz-linear-gradient(top,  @header-navbar-badge-gradient-top 0%, @header-navbar-badge-gradient-bottom 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@header-navbar-badge-gradient-top), color-stop(100%,@header-navbar-badge-gradient-bottom)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 100%); /* W3C */
   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#484848', endColorstr='#1d1a1b',GradientType=0 ); /* IE6-9 */
 
   box-shadow:
-           1px 0 3px rgba(0,0,0, 0.45)
-  ,       -1px 0 3px rgba(0,0,0, 0.45)
+           1px 0 3px rgba(0,0,0, 0.20)
+  ,       -1px 0 3px rgba(0,0,0, 0.20)
   , inset  1px 0 0   rgba(255,255,255, 0.02)
   , inset -1px 0 0   rgba(255,255,255, 0.02);
 
@@ -213,7 +217,7 @@ li.get-the-app .icon-iphone-app {
   height: 38px;
   overflow: hidden;
   border-radius: 5px;
-  border: solid #1f1f1f 1px;
+  border: solid @header-navbar-badge-avatar-stroke 1px;
 }
 
 .badge .avatar-shadow {
