fix products-list top-margin

--- a/pages/explore/explore-style.less
+++ b/pages/explore/explore-style.less
@@ -2,13 +2,13 @@
 @import "/styles/mixins.less";
 @import "/styles/forms.less";
 
-.page-explore.fixed-header {
-  padding-top: 154px;
-}
-
 header.page-header-box {
   position: fixed;
   z-index: 1;
   width: 1195px;
   top: 55px;
+}
+
+.page.page-explore .products-list {
+  margin-top: 43px;
 }
