put in proper red

--- a/components/products-list-header/products-list-header-style.less
+++ b/components/products-list-header/products-list-header-style.less
@@ -5,7 +5,7 @@
 .header-tagline {
   text-align: center;
   line-height: 42px;
-  color: red; /* TODO: proper red color */
+  color: #eb2217;
   font-size: 23px;
   font-weight: 500;
 }
