removed search button drop shadow

--- a/components/products-list-header/products-list-header-tmpl.handlebars
+++ b/components/products-list-header/products-list-header-tmpl.handlebars
@@ -15,7 +15,7 @@
     <form id="header-search-form" class="form-search">
       <div class="input-append">
         <input class="field-search" placeholder="Search Gallery" type="text">
-        <button class="btn btn-primary" type="submit">Search</button>
+        <button class="btn btn-primary field-search-submit" type="submit">Search</button>
       </div>
       <button class="field-search-clear hide" type="button"><i class="icon-remove"></i></button>
     </form>
