--- a/components/products-list-header/products-list-header-style.less
+++ b/components/products-list-header/products-list-header-style.less
@@ -1,3 +1,6 @@
+@import "/styles/variables.less";
+@import "/styles/mixins.less";
+
 .header-controls {
   padding-top: 10px;
 }
@@ -30,4 +33,8 @@
   z-index: 2;
   border: none;
   background: none;
+}
+
+#header-search-form .field-search-submit {
+  .box-shadow(none);
 }
