added optional top left/right buttons to header for edit collection

--- a/components/products-list-header/products-list-header-style.less
+++ b/components/products-list-header/products-list-header-style.less
@@ -5,6 +5,10 @@
   padding-top: 10px;
 }
 
+.header-top-buttons .top-right-btn {
+  float:right;
+}
+
 .header-tagline {
   text-align: center;
   line-height: 42px;
