--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -27,15 +27,15 @@
 
 .products-list .product-footer {
   position: relative;
-  padding: 6px 0;
+  padding: 2px 0;
   text-align: center;
   font-size: 16px;
-  color: @gray-light;
+  color: #b2a996;
   // Makes the text funky
   // text-shadow: 0 -1px 0 rgba(0,0,0, 0.5);
   box-shadow: 0 -1px 2px rgba(0,0,0,0.2);
 
-  #gradient > .vertical(#fff, #e8e8e8);
+  #gradient > .vertical(#fff, #f7f2e0);
 }
 
 .products-list .icon-like-count,
@@ -81,7 +81,7 @@
 
   box-shadow: 0 1px 2px rgba(0,0,0, 0.22);
 
-  #gradient > .vertical(rgba(255,255,255, 1), rgba(255,255,255, 0.78));
+  #gradient > .vertical(rgba(255,255,255, 1), rgba(255,255,255, 0.50));
 }
 
 .product-list-item .product-name {
@@ -89,14 +89,14 @@
   font-weight: 600;
   line-height: 16px;
   margin: 0;
-  color: #4c4c4c;
+  color: #6b594f;
 }
 
 .product-list-item .business-name {
   display: inline-block;
   margin-left: 2px;
   font-size: 13px;
-  color: #4c4c4c;
+  color: #6b594f;
 }
 
 .product-list-item .product-feelings {
@@ -180,7 +180,7 @@
 }
 
 .product-list-item .product-feelings .feeling {
-  color: #888;
+  color: lighten(#888, 20%);
   display: block;
 }
 
