--- a/styles/variables.less
+++ b/styles/variables.less
@@ -6,6 +6,10 @@
 // Global values
 // --------------------------------------------------
 
+// Branding Palette
+@gb-primary:            #dc291e; // Bright red
+@gb-secondary:          #fff;    // White
+@gb-accent:             #feffba; // Pastel yellow
 
 // Grays
 // -------------------------
@@ -89,7 +93,7 @@
 // Buttons
 // -------------------------
 @btnBackground:                     @white;
-@btnBackgroundHighlight:            darken(@white, 10%);
+@btnBackgroundHighlight:            #f5efe1;
 @btnBorder:                         #ccc;
 
 @btnPrimaryBackground:              #ffeb5a;
