only some collections are editable

--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -1,6 +1,6 @@
 <header class="page-header-box"></header>
 
-<ul class="products-list"></ul>
+<ul class="products-list{{#if collection.isEditable}} collection-products{{/if}}"></ul>
 
 <h2 class="hide no-results">No products matched your search :(</h2>
 
