--- a/styles/variables.less
+++ b/styles/variables.less
@@ -7,7 +7,7 @@
 // --------------------------------------------------
 
 // Branding Palette
-@gb-primary:            #dc291e; // Bright red
+@gb-primary:            #eb2217; // Bright red
 @gb-secondary:          #fff;    // White
 @gb-accent:             #feffba; // Pastel yellow
 
