made header-search-form a class

--- a/components/products-list-header/products-list-header-style.less
+++ b/components/products-list-header/products-list-header-style.less
@@ -25,19 +25,19 @@
   text-transform: uppercase;
 }
 
-#header-search-form {
+.header-search-form {
   padding-top: 4px;
   margin-bottom: 0; /* override rule for forms */
   float: right;
   position: relative;
 }
 
-#header-search-form input.field-search {
+.header-search-form input.field-search {
   font-size: 15px;
   width: 229px;
 }
 
-#header-search-form .field-search-clear {
+.header-search-form .field-search-clear {
   position: absolute;
   top: 0;
   margin-top: 11px;
@@ -47,6 +47,6 @@
   background: none;
 }
 
-#header-search-form .field-search-submit {
+.header-search-form .field-search-submit {
   .box-shadow(none);
 }
