--- a/components/products-list-header/products-list-header-tmpl.handlebars
+++ b/components/products-list-header/products-list-header-tmpl.handlebars
@@ -23,7 +23,7 @@
 
   {{! Search }}
   <div class="span3">
-    <form id="header-search-form" class="form-search">
+    <form class="form-search header-search-form">
       <div class="input-append">
         <input class="field-search" placeholder="Search Gallery" type="text">
         <button class="btn btn-primary field-search-submit" type="submit">Search</button>
