--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -164,15 +164,8 @@ li.get-the-app .icon-iphone-app {
   width: 210px;
   height: 100%;
 
-  background: @header-navbar-badge-gradient-top; /* Old browsers */
-  background: -moz-linear-gradient(top,  @header-navbar-badge-gradient-top 0%, @header-navbar-badge-gradient-bottom 50%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@header-navbar-badge-gradient-top), color-stop(50%,@header-navbar-badge-gradient-bottom)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 50%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 50%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 50%); /* IE10+ */
-  background: linear-gradient(to bottom,  @header-navbar-badge-gradient-top 0%,@header-navbar-badge-gradient-bottom 50%); /* W3C */
-  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#484848', endColorstr='#1d1a1b',GradientType=0 ); /* IE6-9 */
-
+  #gradient .vertical(@header-navbar-badge-gradient-top, @header-navbar-badge-gradient-bottom);
+  
   box-shadow:
            1px 0 3px rgba(0,0,0, 0.20)
   ,       -1px 0 3px rgba(0,0,0, 0.20)
