header dropdown colors

--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -97,7 +97,7 @@
 
   box-shadow: inset @header-navbar-shadow, 0 4px 6px @header-navbar-shadow-color;
 
-  background: @gray-dark;
+  background: #cc1e14;
   text-align: center;
 }
 
@@ -109,19 +109,19 @@
   display: block;
   padding: 10px 0;
   border-bottom: none;
-  border-top: solid #3d3d3d 1px;
+  border-top: solid #a32921 1px;
   color: #fff;
   font-size: 16px;
   font-weight: 100;
 }
 
 .header-navbar .dropdown-menu li > a:hover {
-  background: #484848;
-  border-top: solid #515151 1px;
+  background: #eb2217;
+  border-top: solid #a32921 1px;
 }
 
 .header-navbar .dropdown-menu li:hover + li > a {
-  border-top: solid #515151 1px;
+  border-top: solid #a32921 1px;
 }
 
 .header-navbar .dropdown-menu li:first-child > a {
