my punchcards page

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -10,6 +10,8 @@
 @gb-primary:            #eb2217; // Bright red
 @gb-secondary:          #fff;    // White
 @gb-accent:             #feffba; // Pastel yellow
+@gb-text-primary:       #6b594f;
+@gb-text-secondary:     #9e9b95;
 
 // Grays
 // -------------------------
