--- a/pages/punch-cards/punch-cards-style.less
+++ b/pages/punch-cards/punch-cards-style.less
@@ -44,17 +44,16 @@
 // ----------------
 
 .punchcard-group-header {
-  // Stupid require-less normalizes urls for me
-  background-image: url("../../styles/@{texture-jeans-blue}");
+  background-color: #f7382e;
+  color: #66130d !important;
   box-shadow:
-    inset 0  2px 2px rgba(255,255,255, 0.3),
-    inset 0 -2px 4px rgba(0,0,0, 0.2),
-          0  2px 4px rgba(0,0,0, 0.2);
+    inset 0 -1px 1px rgba(0,0,0, 0.2),
+          0  1px 1px rgba(0,0,0, 0.2);
 }
 
 .punchcard-group-elite .punchcard-group-header {
-  // Stupid require-less normalizes urls for me
-  background-image: url("../../styles/@{texture-jeans-yellow}");
+  background-color: #ffd414;
+  color: #5e5308 !important;
   .add-border-tops()
 }
 
@@ -71,6 +70,10 @@
   .add-gutter-left();
 }
 
+.no-punch-cards {
+  color: @gb-text-primary;
+}
+
 // Details
 // ----------------
 
@@ -83,6 +86,8 @@
   border-top: 1px #ddd solid;
 
   cursor: pointer;
+
+  #gradient > .vertical(#ffffff, #fcfcfa);
 }
 
 .punchcard-group > .punchcard:first-child {
@@ -90,7 +95,8 @@
 }
 
 .punchcard-group > .punchcard:hover {
-  #gradient > .vertical(#e1f4fa, #e5f9ff);
+  background-image: none;
+  background-color: #fffae5;
 }
 
 .punchcard .details {
@@ -117,7 +123,7 @@
 .title-and-description > .title {
   font-size: 20px;
   font-weight: normal;
-  color: #555;
+  color: @gb-text-primary;
   line-height: 20px;
   margin: 4px 0 4px 0;
 }
@@ -127,7 +133,7 @@
   margin-bottom: 0;
   font-size: 14px;
   font-style: italic;
-  color: @gray-light;
+  color: @gb-text-secondary;
 }
 
 .punchcard .num-punches {
@@ -135,6 +141,7 @@
   font-size: 22px;
   margin-top: 16px;
   font-weight: 100;
+  color: @gb-text-primary;
 }
 
 .punchcard .num-rewards-wrapper {
