--- a/styles/pages.less
+++ b/styles/pages.less
@@ -1,4 +1,6 @@
-//@import "/styles/mixins.less"
+@import "/styles/variables.less";
+@import "/styles/mixins.less";
+
 
 @page-header-gradient-top:    #fff;
 @page-header-gradient-bottom: #fffdf2;
@@ -27,6 +29,7 @@
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 24px;
+  color: @gb-primary;
 }
 
 .page-header-box .filters-wrapper {
