--- a/pages/business/business-style.less
+++ b/pages/business/business-style.less
@@ -9,6 +9,14 @@
   padding-bottom: 0;
 }
 
+.biz-info-area {
+  color: @gb-text-primary;
+}
+
+.biz-info-area h1, h2, h3, h4, h5, h6 {
+  color: @gb-text-primary;
+}
+
 .page-business .logo-wrapper {
   display: table;
   box-sizing: border-box;
@@ -18,7 +26,7 @@
 
 .page-business .business-logo {
   border-radius: 8px;
-  border: 1px @gray-light solid;
+  border: 1px solid #d1cdc5;
   width: @logo-width;
 }
 
@@ -39,22 +47,16 @@
   margin-top: 26px;
   margin-bottom: 28px;
   font-size: 20px;
-  color: @info-color;
 }
 
 .page-business .biz-info .biz-info-title {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 2px;
-  color: @text-color;
 }
 
 .page-business .biz-info-hours-list {
   margin: 0;
-}
-
-.page-business .biz-info-website a {
-  color: @info-color;
 }
 
 .page-business .biz-info-hours-list dt {
