--- a/pages/business/business-tmpl.handlebars
+++ b/pages/business/business-tmpl.handlebars
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="span10 plateau page-plateau">
-    <div class="row">
+    <div class="row biz-info-area">
       {{! Logo and Punchcard button }}
       <div class="span4 logo-wrapper">
         <img src="{{filepicker business.logoUrl 240 240}}" alt="{{business.name}}" class="business-logo">
