--- a/pages/punch-cards/punch-cards-style.less
+++ b/pages/punch-cards/punch-cards-style.less
@@ -95,8 +95,7 @@
 }
 
 .punchcard-group > .punchcard:hover {
-  background-image: none;
-  background-color: #fffae5;
+  background: @row-hover-highlight;
 }
 
 .punchcard .details {
