made row highlight a var

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -12,6 +12,7 @@
 @gb-accent:             #feffba; // Pastel yellow
 @gb-text-primary:       #6b594f;
 @gb-text-secondary:     #9e9b95;
+@row-hover-highlight:   #fffae5;
 
 // Grays
 // -------------------------
