lighter weight page title

--- a/styles/pages.less
+++ b/styles/pages.less
@@ -30,6 +30,7 @@
   text-align: center;
   margin-bottom: 24px;
   color: @gb-primary;
+  font-weight: 200;
 }
 
 .page-header-box .filters-wrapper {
