--- a/pages/punch-cards/punch-cards-style.less
+++ b/pages/punch-cards/punch-cards-style.less
@@ -45,18 +45,25 @@
 
 .punchcard-group-header {
   background-color: #f7382e;
-  color: #66130d !important;
+  color: #66130d;
   box-shadow:
     inset 0 -1px 1px rgba(0,0,0, 0.2),
           0  1px 1px rgba(0,0,0, 0.2);
 }
 
+.punchcard-group-header h1, h2, h3, h4, h5, h6 {
+  color: #66130d;
+}
+
 .punchcard-group-elite .punchcard-group-header {
   background-color: #ffd414;
-  color: #5e5308 !important;
+  color: #5e5308;
   .add-border-tops()
 }
 
+.punchcard-group-elite .punchcard-group-header h1, h2, h3, h4, h5, h6 {
+  color: #5e5308;
+}
 .punchcard-group-header,
 .punchcard-group-header h1 {
   font-size: 16px;
