--- a/pages/settings/settings-style.less
+++ b/pages/settings/settings-style.less
@@ -5,7 +5,11 @@
   text-align: center;
 }
 
+.form-wrapper form label {
+  color: @gb-text-primary;
+}
+
 .page-settings .avatar {
   border-radius: 6px;
-  border: solid #ccc 1px;
+  border: solid #d1cdc5 1px;
 }
