--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -33,7 +33,7 @@
   width: 100%;
   padding: 50px 0;
   border-radius: 8px;
-  box-shadow: 0 0 6px rgba(0,0,0, 0.33);
+  box-shadow: 0 1px 5px rgba(0,0,0, 0.30);
 /*
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
