restyled the modals

--- a/components/wlt/wlt-styles.less
+++ b/components/wlt/wlt-styles.less
@@ -9,11 +9,11 @@
   font-weight: 600;
   text-transform: uppercase;
 
-  #gradient > .vertical(#fff, #e6e6e6);
+  #gradient > .vertical(#ffffff, #f5efe1);
 }
 
 .wlt-btn-group > .btn.active {
-  color: #555;
+  background-image: none;
 }
 
 .wlt-btn-group > .btn-want > .icon-wlt {
