--- a/styles/modals.less
+++ b/styles/modals.less
@@ -1,3 +1,5 @@
+@import "/styles/variables.less";
+
 //
 // Modals
 // --------------------------------------------------
@@ -28,8 +30,7 @@
   z-index: @zindexModal;
   width: 560px;
   margin-left: -280px;
-  background-color: @white;
-  background-image: url('@{texture-linen}');
+  background-color: #faf7eb;
   .border-radius(6px);
   .box-shadow(0 3px 7px rgba(0,0,0,0.3));
   .background-clip(padding-box);
@@ -37,13 +38,17 @@
   outline: none;
   padding: 32px 0 12px 0;
   text-shadow: 0 1px 0 #fff;
-  // color: #4d4d4d;
+  color: @gb-text-primary;
 
   &.fade {
     .transition(e('opacity .3s linear, top .3s ease-out'));
     top: -25%;
   }
   &.fade.in { top: 10%; }
+}
+
+.modal h1, h2, h3, h4, h5, h6 {
+  color: @gb-text-primary;
 }
 
 .modal .modal-close {
