--- a/styles/punchcard-stack.less
+++ b/styles/punchcard-stack.less
@@ -32,7 +32,7 @@
 
 .punchcard-stack .description > .requirement {
   display: block;
-  color: #00B3E7;
+  color: #d97871;
   font-size: 18px;
   font-weight: 500;
 }
