products list item wlt colors

--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -133,7 +133,7 @@
 }
 
 .product-list-item .product-feelings > li.active {
-  background: #dbdbdb;
+  background: #dbd4c5;
   box-shadow: inset 0 1px 0 rgba(255,255,255, 0.4);
 }
 
@@ -180,8 +180,12 @@
 }
 
 .product-list-item .product-feelings .feeling {
-  color: lighten(#888, 20%);
+  color: #b8af9e;
   display: block;
+}
+
+.product-list-item .product-feelings .feeling-like.active .feeling {
+  color: #999284;
 }
 
 .products-list-spinner {
