fixed styling on login and register modals

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -7,7 +7,6 @@
 .login-modal h1 {
   font-size: 46px;
   line-height: 50px;
-  color: #4c4c4c;
 }
 
 .login-form {
@@ -58,7 +57,7 @@
 
 .forgot-password {
   float: right;
-  color: #4c4c4c;
+  color: @gb-text-primary;
   text-decoration: underline;
   font-size: 14px;
   line-height: 30px;
@@ -75,6 +74,6 @@
 }
 
 .register-wrapper a {
-  color: #4C4C4C;
+  color: @gb-text-primary;
   // text-decoration: underline;
 }
