how it works mobile images

--- a/pages/how-it-works/how-it-works-tmpl.handlebars
+++ b/pages/how-it-works/how-it-works-tmpl.handlebars
@@ -61,7 +61,7 @@
         </div>
         <div class="span4">
           <div class="img-wrapper">
-            <img src="img/how-it-works-3.jpg" alt="Goodybag App">
+            <img src="img/explore+menu.png" alt="Goodybag App">
           </div>
         </div>
       </section>
@@ -69,7 +69,7 @@
       <section class="row section-left how-it-works-section section-mobile-2">
         <div class="span4">
           <div class="img-wrapper">
-            <img src="img/how-it-works-4.jpg" alt="Goodybag App">
+            <img src="img/my_collections.png" alt="Goodybag App">
           </div>
         </div>
         <div class="span4 content-wrapper">
@@ -87,7 +87,7 @@
         </div>
         <div class="span4">
           <div class="img-wrapper">
-            <img src="img/how-it-works-5.jpg" alt="Goodybag App">
+            <img src="img/my_punchcards.png" alt="Goodybag App">
           </div>
         </div>
       </section>
