made default text color gb-primary brown

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -51,7 +51,7 @@
 @white:                 #fff;
 @black:                 #000;
 @body-bg:               @white;
-@text-color:            @gray-dark;
+@text-color:            @gb-text-primary;
 
 // Links
 // -------------------------
