--- a/pages/gb-for-businesses/gb-for-businesses-style.less
+++ b/pages/gb-for-businesses/gb-for-businesses-style.less
@@ -6,7 +6,7 @@
 @import "/styles/mixins.less";
 
 .form-title {
-  color: #00bcf5;
+  color: @gb-primary;
   font-size: 20px;
   text-align: center;
   font-weight: 500;
