swapped out tablet images for how it works

--- a/pages/how-it-works/how-it-works-tmpl.handlebars
+++ b/pages/how-it-works/how-it-works-tmpl.handlebars
@@ -21,7 +21,7 @@
         </div>
         <div class="span4">
           <div class="img-wrapper">
-            <img src="img/how-it-works-1.jpg" alt="">
+            <img src="img/tablet_homescreen.png" alt="">
           </div>
         </div>
       </section>
@@ -29,7 +29,7 @@
       <section class="row section-right how-it-works-section rewards">
         <div class="span4">
           <div class="img-wrapper">
-            <img src="img/how-it-works-2.jpg" class="how-it-works-2-img" alt="">
+            <img src="img/tablet_rewards.png" class="how-it-works-2-img" alt="">
           </div>
         </div>
 
