update locations styling

--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -57,7 +57,7 @@
 .fancy-separator > p {
   display: inline-block;
   width: 50%;
-  border-bottom: 1px solid #888;
+  border-bottom: 1px solid @gb-text-primary;
   line-height: 2px;
 }
 
@@ -65,7 +65,7 @@
   font-style: italic;
   font-size: 14px;
   font-weight: 500;
-  color: @gray;
+  color: @gb-text-primary;
   padding: 0 8px;
   background-color: #fff;
 }
