update brand-primary color to red

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -27,7 +27,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #50cbf0;
+@brand-primary:         @gb-primary;
 @brand-success:         #28dd5c;
 @brand-warning:         #ffea61;
 @brand-danger:          #ff6161;
