renamed image file so it doesn't cause grunt problems

--- a/pages/how-it-works/how-it-works-tmpl.handlebars
+++ b/pages/how-it-works/how-it-works-tmpl.handlebars
@@ -61,7 +61,7 @@
         </div>
         <div class="span4">
           <div class="img-wrapper">
-            <img src="img/explore+menu.png" alt="Goodybag App">
+            <img src="img/explore-and-menu.png" alt="Goodybag App">
           </div>
         </div>
       </section>
