--- a/pages/locations/locations-style.less
+++ b/pages/locations/locations-style.less
@@ -5,7 +5,7 @@
   border: 1px solid #BAB7B5;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.17),
               inset 0 1px 2px #ffffff;
-  background: #F6F6F6;
+  background: #fcfaf2;
   border-radius: 7px;
 }
 
