fix charities page

--- a/pages/charities/charities-style.less
+++ b/pages/charities/charities-style.less
@@ -13,6 +13,7 @@
   overflow:hidden;
   text-align: center;
 }
+
 .char-list li{
   display: inline-block;
   text-align: left;
@@ -22,8 +23,9 @@
   border:1px solid #bbb9b6;
   box-shadow:0 2px 4px 0 rgba(0,0,0,0.2), inset 0 0 1px 1px #fff;
   border-radius:5px;
-  background:#f2f2f2;
+  background:#fcfaf2;
 }
+
 .char-list .col{
   float:left;
   width:178px;
@@ -36,14 +38,16 @@
   border-radius:3px;
   margin:0 auto 10px;
 }
+
 .char-list .col .link{
   display:inline-block;
   vertical-align:top;
   font-size:13px;
   line-height:17px;
-  color:#333;
+  color:@gb-text-primary;
   padding:0 16px 0 0;
 }
+
 .char-list .frame{
   float:left;
   width:262px;
@@ -54,14 +58,15 @@
   line-height:16px;
   color:#3d3f40;
 }
+
 .char-list p{margin:0;}
+
 .char-list h2{
   font-size:22px;
   line-height:22px;
   font-weight:normal;
   margin:0 0 10px;
   height:52px;
-  color:#333;
 }
 
 .char-list .link-icon {
