use new address helper

--- a/pages/business/business-tmpl.handlebars
+++ b/pages/business/business-tmpl.handlebars
@@ -20,8 +20,7 @@
         <div class="biz-info biz-info-address">
           <h4 class="biz-info-title">Address</h4>
           <address class="location-address">
-            {{location.street1}}, {{#if location.street2}}{{location.street2}}, {{/if}}<br />
-            {{location.city}}, {{location.state}} {{location.zip}}
+            {{{address location}}}
           </address>
         </div>
 
