--- a/pages/business/business-tmpl.handlebars
+++ b/pages/business/business-tmpl.handlebars
@@ -19,9 +19,7 @@
         {{! Address }}
         <div class="biz-info biz-info-address">
           <h4 class="biz-info-title">Address</h4>
-          <address class="location-address">
-            {{{address location}}}
-          </address>
+          <address class="location-address">{{{address location}}}</address>
         </div>
 
         {{! Phone }}
