rename facebook-login-button to btn-fb-connect for consistency

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -17,7 +17,7 @@
   text-align: center;
 }
 
-.login-modal .facebook-login-button {
+.login-modal .btn-fb-connect {
   margin-left: 7px;
   line-height: 72px;
   color: white;
