--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -39,7 +39,7 @@
 .banner-regular-small,
 .elite-punch-indicator,
 .or-divider,
-.facebook-login-button,
+.btn-fb-connect,
 .submit-button {
   .sprite();
 }
@@ -121,15 +121,15 @@
   background-position: -446px -349px;
 }
 
-.facebook-login-button {
+.btn-fb-connect {
   display: inline-block;
   width:338px;
   height:72px;
   background-position: -506px -18px;
 }
 
-.facebook-login-button:active {
-  .facebook-login-button;
+.btn-fb-connect:active {
+  .btn-fb-connect;
   background-position: -506px -103px;
 }
 
