--- a/modals/register/register-style.less
+++ b/modals/register/register-style.less
@@ -17,7 +17,7 @@
   text-align: center;
 }
 
-.register-modal .facebook-login-button {
+.register-modal .btn-fb-connect {
   margin-left: 7px;
   line-height: 72px;
   color: white;
